--- a/新懒人.conf
+++ b/新懒人.conf
@@ -1,8 +1,9 @@
-# Shadowrocket: 2025-12-16 18:10:00 (Reordered)
+# Shadowrocket: 2025-12-11 15:15:00 (Safe Version)
 [General]
 # === 核心说明 ===
-# 调整内容：AI/谷歌策略组置顶；兜底/测速策略组置底。
-# 规则匹配优先级已同步优化。
+# 此文件为「公共规则集」，不包含私人订阅链接。
+# 请在 Shadowrocket 首页 -> "+" -> 添加你的机场订阅链接。
+# 系统会自动根据下方的正则 (regex) 抓取你的节点。
 
 bypass-system = true
 skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,captive.apple.com,*.ccb.com,*.abchina.com.cn,*.psbc.com,www.baidu.com
@@ -18,50 +19,37 @@ private-ip-answer = true
 dns-direct-fallback-proxy = true
 hijack-dns = 8.8.8.8:53,8.8.4.4:53
 udp-policy-not-supported-behaviour = REJECT
-# 请确保下方链接是您实际托管此文件的地址，否则无法自动更新
-update-url = https://raw.githubusercontent.com/kkk-dollars/My-Shadowrocket/refs/heads/main/%E6%96%B0%E6%87%92%E4%BA%BA.conf
 
 [Proxy]
 # ⚠️ 注意：不要在这里粘贴机场订阅链接！
 # 请直接在小火箭 APP 首页添加订阅。
 
 [Proxy Group]
-# === 策略组定义 (界面显示顺序) ===
+# === 策略组定义 ===
+# 交易所策略组 (避开美国节点，优先新加坡/日本)
+交易所 = select,PROXY,新加坡节点,日本节点,台湾节点,香港节点,policy-select-name=新加坡节点
 
-# 1. 第一梯队：最常用 (置顶)
+银行服务 = select,DIRECT,PROXY,香港节点,policy-select-name=DIRECT
 AI = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=新加坡节点
 谷歌服务 = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=新加坡节点
 YouTube = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=新加坡节点
-
-# 2. 第二梯队：金融与交易
-交易所 = select,PROXY,新加坡节点,日本节点,台湾节点,香港节点,policy-select-name=新加坡节点
-银行服务 = select,PROXY,香港节点,DIRECT,policy-select-name=PROXY
-PayPal = select,DIRECT,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=PROXY
-
-# 3. 第三梯队：流媒体与社交
 Netflix = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=新加坡节点
 Disney+ = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=新加坡节点
 Max = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=PROXY
 TikTok = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=美国节点
 Spotify = select,DIRECT,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=PROXY
 Telegram = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=新加坡节点
-Twitter = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=香港节点
+Twitter = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=新加坡节点
 Facebook = select,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=新加坡节点
+PayPal = select,DIRECT,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=PROXY
 Amazon = select,DIRECT,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=PROXY
-
-# 4. 第四梯队：系统与游戏
 苹果服务 = select,DIRECT,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=DIRECT
 微软服务 = select,DIRECT,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=DIRECT
 哔哩哔哩 = select,DIRECT,PROXY,香港节点,台湾节点,policy-select-name=DIRECT
 游戏平台 = select,DIRECT,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=DIRECT
 
-# 5. 第五梯队：工具与兜底 (置底)
-# 测速服务：Speedtest 等
-测速服务 = select,DIRECT,PROXY,香港节点,台湾节点,日本节点,新加坡节点,韩国节点,美国节点,policy-select-name=PROXY
-# 漏网之鱼：匹配所有未命中规则的流量
-漏网之鱼 = select,PROXY,DIRECT,香港节点,台湾节点,日本节点,新加坡节点,美国节点,policy-select-name=PROXY
-
 # === 自动抓取并筛选节点 ===
+# 这里会读取你在 APP 首页添加的所有订阅节点，并按名字自动归类
 香港节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=0,timeout=5,select=0,policy-regex-filter=HK|Hong|hong|香港|深港|沪港|京港|港
 台湾节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=0,timeout=5,select=0,policy-regex-filter=TW|Taiwan|taiwan|台湾|台北|台中|新北|彰化
 日本节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=0,timeout=5,select=0,policy-regex-filter=JP|Japan|japan|Tokyo|tokyo|日本|东京|大阪|京日|苏日|沪日|上日|川日|深日|广日
@@ -71,49 +59,45 @@ Amazon = select,DIRECT,PROXY,香港节点,台湾节点,日本节点,新加坡节
 
 [Rule]
 # ==========================================
-# 0. 基础网络规则 (优先级绝对第一，勿动)
+# 1. AI 服务
 # ==========================================
-# 局域网 & 直连修正
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
-DOMAIN-SUFFIX,local,DIRECT
-IP-CIDR,192.168.0.0/16,DIRECT
-IP-CIDR,10.0.0.0/8,DIRECT
-IP-CIDR,172.16.0.0/12,DIRECT
-IP-CIDR,127.0.0.0/8,DIRECT
-
-# ==========================================
-# 1. 第一优先级业务 (AI & Google)
-# ==========================================
-# AI 服务
 DOMAIN-SUFFIX,x.ai,AI
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Claude/Claude.list,AI
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Gemini/Gemini.list,AI
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,AI
 
-# 谷歌服务
-DOMAIN,app-measurement.com,谷歌服务
-DOMAIN,firebaseinstallations.googleapis.com,谷歌服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,谷歌服务
-# YouTube (归类在谷歌系之后)
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,YOUTUBE
-
 # ==========================================
-# 2. 第二优先级业务 (交易所 & 银行)
+# 1.1 交易所服务 (Binance & OKX)
 # ==========================================
-# 交易所
 DOMAIN-KEYWORD,binance,交易所
 DOMAIN-KEYWORD,okx,交易所
 DOMAIN-KEYWORD,okex,交易所
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Binance/Binance.list,交易所
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OKX/OKX.list,交易所
 
-# 银行服务
+# ==========================================
+# 2. 谷歌服务
+# ==========================================
+DOMAIN,app-measurement.com,谷歌服务
+DOMAIN,firebaseinstallations.googleapis.com,谷歌服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,谷歌服务
+
+# ==========================================
+# 3. YouTube
+# ==========================================
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,YOUTUBE
+
+# ==========================================
+# 4. 银行服务 (含 Mastercard/Visa)
+# ==========================================
+# 万事达 & Visa
 DOMAIN-SUFFIX,mastercard.com,银行服务
 DOMAIN-SUFFIX,mastercard.cn,银行服务
 DOMAIN-SUFFIX,mastercard.com.cn,银行服务
 DOMAIN-SUFFIX,visa.com,银行服务
 DOMAIN-SUFFIX,visa.cn,银行服务
 DOMAIN-SUFFIX,visa.com.cn,银行服务
+# 香港银行 & Wise
 DOMAIN-SUFFIX,rewardplus.hsbc.com.hk,银行服务
 DOMAIN-SUFFIX,wise.com,银行服务
 DOMAIN-SUFFIX,transferwise.com,银行服务
@@ -135,7 +119,7 @@ DOMAIN-KEYWORD,bochk,银行服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/PayPal/PayPal.list,PAYPAL
 
 # ==========================================
-# 3. 其他业务 (社交/流媒体)
+# 5. 其他流媒体与社交服务
 # ==========================================
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,NETFLIX
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,DISNEY+
@@ -151,13 +135,8 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Amazon/Amazon.list,AMAZON
 
 # ==========================================
-# 4. 常规/兜底/测速
+# 6. 常规服务、国内分流与兜底
 # ==========================================
-# 测速服务 (规则)
-DOMAIN-SUFFIX,ookla.com,测速服务
-DOMAIN-SUFFIX,speedtest.net,测速服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Speedtest/Speedtest.list,测速服务
-
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list,苹果服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,微软服务
@@ -178,21 +157,13 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Sina/Sina.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Zhihu/Zhihu.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/XiaoHongShu/XiaoHongShu.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/China/China.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
 
-# 国内直连强化 (China Max)
-DOMAIN-SUFFIX,360.com,DIRECT
-DOMAIN-SUFFIX,360.cn,DIRECT
-DOMAIN-SUFFIX,iciba.com,DIRECT
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaMedia/ChinaMedia.list,DIRECT
-
-# 兜底规则
-# 局域网再次兜底 (安全起见)
-GEOIP,PRIVATE,DIRECT
-# 中国 IP 直连
+# IP 规则
 GEOIP,CN,DIRECT
-# 其他所有流量 -> 漏网之鱼 (默认走代理)
-FINAL,漏网之鱼
+FINAL,PROXY
 
 [Host]
 *.apple.com = server:system
